--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/carousel": "^5.5.6",
+    "@mantine/core": "^5.5.6",
+    "@mantine/hooks": "^5.5.6",
+    "bootstrap": "^5.2.2",
+    "embla-carousel-react": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
