--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mantine/carousel": "^5.5.6",
     "@mantine/core": "^5.5.6",
     "@mantine/hooks": "^5.5.6",
+    "@tanstack/react-query": "^4.13.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "embla-carousel-react": "^7.0.3",
     "react": "^18.2.0",
